<resources>
	<string name="app_name">WeLove</string>
	<string-array name="gender_options">
		<item>Select Gender</item>
		<item>Male</item>
		<item>Female</item>
		<item>Shemale</item>
		<item>Gay</item>
		<item>Lesbian</item>
		<item>Trans</item>
	</string-array>
	<string-array name="pref_gender_options">
		<item>Select Prefered Gender</item>
		<item>Male</item>
		<item>Female</item>
		<item>Shemale</item>
		<item>Gay</item>
		<item>Lesbian</item>
		<item>Trans</item>
	</string-array>
	<string-array name="maritalstatus_options">
		<item>Select Marital Status</item>
		<item>Single</item>
		<item>Married</item>
		<item>Widowed</item>
		<item>Divorced</item>
		<item>Single with Child</item>
		<item>Divorced with Child</item>
		<item>Widowed With Child</item>
	</string-array>
	<string-array name="Educationlevel_options">
		<item>Select Education Level</item>
		<item>High School</item>
		<item>Bachelors</item>
		<item>Engineering</item>
		<item>Masters</item>
		<item>Phd</item>
		<item>Others</item>
	</string-array>
	<string-array name="jobtype_options">
		<item>Select JobType</item>
		<item>Student</item>
		<item>Engineer</item>
		<item>Doctor</item>
		<item>Teacher</item>
		<item>Artist</item>
		<item>Manager</item>
		<item>Chef</item>
		<item>Driver</item>
		<item>Pilot</item>
		<item>Writer</item>
		<item>Private job</item>
		<item>Other</item>
	</string-array>

	<string-array name="mother_tongue_options">
		<item>Select Mothertounge</item>
		<item>Telugu</item>
		<item>Hindi</item>
		<item>English</item>
		<item>Tamil</item>
		<item>KonKani</item>
		<item>Bengali</item>
		<item>punjab</item>
		<item>Assamese</item>
		<item>Marathi</item>
		<item>Kannada</item>
		<item>Malyalam</item>
		<item>Urdu</item>
		<item>Gujarathi</item>
		<item>Odia</item>
	</string-array>


	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="native_ad">ca-app-pub-2676604629524489/1552865874</string>
	<string name="edit_text_icon_description">Edit text icon</string>
	<string name="add_icon_description">Add icon</string>
	<string name="default_image_description">Default image placeholder</string>
	<string name="down_arrow_description">dropdown arrow</string>
	<string name="pencil_icon_description">Pencil icon for editing</string>
	<string name="photo_icon_description">to capture image\n</string>
	<string name="lock_icon_description">Lock icon indicating secure or restricted access</string>
	<string name="remove_icon_description">Remove or delete icon</string>
	<string name="gmail_icon_description">Gmail icon representing email</string>
	<string name="app_support_icon_description">App support or help icon</string>
	<string name="terms_and_conditions_description">Terms and Conditions icon\n</string>
	<string name="privacy_policy_description">Privacy Policy icon</string>
	<string name="safety_tips_description">Safety Tips icon\n</string>
	<string name="delete_account_description">Delete Account icon\n</string>
	<string name="Enter_icon_description">Enter icon</string>
	<string name="preferences_icon_description">Preferences icon</string>
	<string name="messages_icon_description">Messages icon</string>
	<string name="love_icon_description">Like icon</string>
	<string name="google_icon_description">Google icon</string>
	<string name="twitter_icon_description">Twitter icon</string>
	<string name="back_icon_description">Back icon</string>
	<string name="more_icon_description">More options icon</string>
	<string name="mobile_icon_description">Mobile icon</string>
	<string name="default_web_client_id">410109947394-c8jpa9c5ig1h38tdc9lrnu1h8fb62t6a.apps.googleusercontent.com</string>
	<string name="terms_and_conditions_title">Terms and Conditions</string>
	<string name="terms_and_conditions_prompt">Please read and accept our Terms and Conditions before proceeding.</string>


</resources>