<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:layout_height="match_parent"
	tools:context=".Profile.HelpCenterActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@android:color/transparent"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:navigationIcon="@drawable/ic_back"
			app:title="HelpCenter"
			app:titleTextColor="@color/black"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			app:titleTextAppearance="@style/ToolbarTitleStyle" />

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.cardview.widget.CardView
		android:id="@+id/appsupportlayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_marginStart="15dp"
			android:layout_marginTop="010dp"
			android:src="@drawable/appsupport"
			android:contentDescription="@string/app_support_icon_description" />

		<TextView
			android:layout_width="264dp"
			android:layout_height="match_parent"
			android:gravity="start|center_vertical"
			android:text="App support"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<ImageView
			android:layout_width="50dp"
			android:layout_height="30dp"
			android:layout_marginTop="15dp"
			android:src="@drawable/next"
			android:contentDescription="@string/Enter_icon_description" />
	</LinearLayout>
	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/termsandconditionslayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_marginTop="10dp"
			android:layout_marginStart="15dp"
			android:src="@drawable/termsandconditions"
			android:contentDescription="@string/terms_and_conditions_description" />

		<TextView
			android:layout_width="260dp"
			android:layout_height="match_parent"
			android:gravity="start|center_vertical"
			android:text="Terms&amp;Conditions"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<ImageView
			android:layout_width="50dp"
			android:layout_marginTop="015dp"
			android:layout_height="30dp"
			android:src="@drawable/next"
			android:contentDescription="@string/Enter_icon_description" />
	</LinearLayout>
	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/privacypolicieslayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_marginTop="10dp"
			android:layout_marginStart="15dp"
			android:src="@drawable/privacypolicy"
			android:contentDescription="@string/privacy_policy_description" />

		<TextView
			android:layout_width="261dp"
			android:layout_height="match_parent"
			android:gravity="start|center_vertical"
			android:text="Privacy Policy"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<ImageView
			android:layout_width="50dp"
			android:layout_marginTop="015dp"
			android:layout_height="30dp"
			android:src="@drawable/next"
			android:contentDescription="@string/Enter_icon_description" />
	</LinearLayout>
	</androidx.cardview.widget.CardView>
	<androidx.cardview.widget.CardView
		android:id="@+id/Refundpolicieslayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="50dp"
				android:layout_height="40dp"
				android:layout_marginTop="10dp"
				android:layout_marginStart="15dp"
				android:src="@drawable/refund"
				android:contentDescription="@string/privacy_policy_description" />

			<TextView
				android:layout_width="261dp"
				android:layout_height="match_parent"
				android:gravity="start|center_vertical"
				android:text="Refund &amp; Cancelation."
				android:textColor="@color/black"
				android:textSize="20sp" />

			<ImageView
				android:layout_width="50dp"
				android:layout_marginTop="015dp"
				android:layout_height="30dp"
				android:src="@drawable/next"
				android:contentDescription="@string/Enter_icon_description" />
		</LinearLayout>
	</androidx.cardview.widget.CardView>
	<androidx.cardview.widget.CardView
		android:id="@+id/safteytipslayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_marginTop="10dp"
			android:layout_marginStart="15dp"
			android:src="@drawable/safetytips"
			android:contentDescription="@string/safety_tips_description" />

		<TextView
			android:layout_width="261dp"
			android:layout_height="match_parent"
			android:gravity="start|center_vertical"
			android:text="Saftey Tips"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<ImageView
			android:layout_width="50dp"
			android:layout_marginTop="015dp"
			android:layout_height="30dp"
			android:src="@drawable/next"
			android:contentDescription="@string/Enter_icon_description" />
	</LinearLayout>
	</androidx.cardview.widget.CardView>
	<androidx.cardview.widget.CardView
		android:id="@+id/deleteaccountlayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginStart="15dp"
		android:layout_marginEnd="15dp"
		app:cardCornerRadius="08dp"
		app:cardElevation="4dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_marginTop="10dp"
			android:layout_marginStart="15dp"
			android:src="@drawable/deleteaccount"
			android:contentDescription="@string/delete_account_description" />

		<TextView
			android:layout_width="260dp"
			android:layout_height="match_parent"
			android:gravity="start|center_vertical"
			android:text="Delete Account"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<ImageView
			android:layout_width="50dp"
			android:layout_marginTop="015dp"
			android:layout_height="30dp"
			android:src="@drawable/next"
			android:contentDescription="@string/Enter_icon_description" />
	</LinearLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>