<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Profile.EditImageActivity">
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@android:color/transparent"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:navigationIcon="@drawable/ic_back"
			app:title="Edit images"
			app:titleTextColor="@color/black"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			app:titleTextAppearance="@style/ToolbarTitleStyle" />

	</com.google.android.material.appbar.AppBarLayout>


	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/appBarLayout"
		app:layout_constraintBottom_toBottomOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">

			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center">

				<de.hdodenhof.circleimageview.CircleImageView
					android:id="@+id/profileimagep"
					android:layout_width="218dp"
					android:layout_height="180dp"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:src="@drawable/defaultimage"
					app:civ_border_color="@color/borderColor" />

				<ImageView
					android:id="@+id/pencil"
					android:layout_width="wrap_content"
					android:layout_height="64dp"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:layout_alignParentBottom="true"
					android:layout_gravity="bottom|end"
					android:layout_marginStart="231dp"
					android:layout_marginTop="118dp"
					android:layout_marginEnd="90dp"
					android:layout_marginBottom="8dp"
					android:src="@drawable/pencil"
					android:contentDescription="@string/pencil_icon_description" />
			</RelativeLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="37dp"
				android:layout_gravity="center"
				android:layout_marginTop="0dp"
				android:gravity="center_horizontal|center|center_vertical"
				android:text="Profile Image"
				android:textColor="@color/black"
				android:textSize="18sp"
				android:textStyle="bold" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="04dp">

				<androidx.cardview.widget.CardView
					android:id="@+id/card1"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginStart="25dp"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="10dp"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp">

					<ImageView
						android:id="@+id/imageview1"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scaleType="centerCrop"
						android:src="@drawable/defaultimage"
						android:visibility="gone"
						android:contentDescription="@string/default_image_description"/>

					<ImageView
						android:id="@+id/pic1"
						android:layout_width="44dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/photo"
						android:visibility="visible"
						android:contentDescription="@string/photo_icon_description" />

					<ImageView
						android:id="@+id/remove1"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_gravity="bottom|right"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:src="@drawable/remove"
						android:visibility="visible"
						android:contentDescription="@string/remove_icon_description" />
				</androidx.cardview.widget.CardView>

				<!-- CardView 2 -->

				<!-- CardView 3 -->
				<androidx.cardview.widget.CardView
					android:id="@+id/card2"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginStart="20dp"
					android:layout_marginTop="16dp"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp">

					<ImageView
						android:id="@+id/imageview2"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scaleType="centerCrop"
						android:src="@drawable/defaultimage"
						android:visibility="gone"
						android:contentDescription="@string/default_image_description"/>

					<ImageView
						android:id="@+id/pic2"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/photo"
						android:visibility="visible"
						android:contentDescription="@string/photo_icon_description" />

					<ImageView
						android:id="@+id/remove2"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_gravity="bottom|right"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:src="@drawable/remove"
						android:visibility="visible"
						android:contentDescription="@string/remove_icon_description" />

				</androidx.cardview.widget.CardView>
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal"
				android:padding="04dp">

				<androidx.cardview.widget.CardView
					android:id="@+id/card3"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_margin="05dp"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp">

					<ImageView
						android:id="@+id/imageview3"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scaleType="centerCrop"
						android:src="@drawable/defaultimage"
						android:visibility="gone"
						android:contentDescription="@string/default_image_description"/>

					<ImageView
						android:id="@+id/pic3"
						android:layout_width="44dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/photo"
						android:visibility="visible"
						android:contentDescription="@string/photo_icon_description" />

					<ImageView
						android:id="@+id/remove3"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_gravity="bottom|right"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:src="@drawable/remove"
						android:visibility="visible"
						android:contentDescription="@string/remove_icon_description" />
				</androidx.cardview.widget.CardView>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="04dp">

				<androidx.cardview.widget.CardView
					android:id="@+id/card4"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginBottom="010dp"
					android:layout_marginStart="25dp"
					android:layout_marginTop="05dp"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp">

					<ImageView
						android:id="@+id/imageview4"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scaleType="centerCrop"
						android:src="@drawable/defaultimage"
						android:visibility="gone"
						android:contentDescription="@string/default_image_description"/>

					<ImageView
						android:id="@+id/lock1"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/lock"
						android:visibility="visible"
						android:contentDescription="@string/lock_icon_description" />

					<ImageView
						android:id="@+id/pic4"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:contentDescription="@string/photo_icon_description"
						android:src="@drawable/photo"
						android:visibility="gone" />

					<ImageView
						android:id="@+id/remove4"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_gravity="bottom|right"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:src="@drawable/remove"
						android:visibility="gone"
						android:contentDescription="@string/remove_icon_description" />

				</androidx.cardview.widget.CardView>

				<!-- CardView 4 -->
				<androidx.cardview.widget.CardView
					android:id="@+id/card5"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginStart="20dp"
					android:layout_marginTop="05dp"
					app:cardCornerRadius="8dp"
					app:cardElevation="4dp">

					<ImageView
						android:id="@+id/imageview5"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:scaleType="centerCrop"
						android:src="@drawable/defaultimage"
						android:visibility="gone"
						android:contentDescription="@string/default_image_description"/>

					<ImageView
						android:id="@+id/lock2"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/lock"
						android:visibility="visible"
						android:contentDescription="@string/lock_icon_description" />

					<ImageView
						android:id="@+id/pic5"
						android:layout_width="50dp"
						android:layout_height="50dp"
						android:layout_gravity="center"
						android:src="@drawable/photo"
						android:visibility="gone"
						android:contentDescription="@string/photo_icon_description" />

					<ImageView
						android:id="@+id/remove5"
						android:layout_width="25dp"
						android:layout_height="25dp"
						android:layout_gravity="bottom|right"
						android:layout_marginEnd="10dp"
						android:layout_marginBottom="10dp"
						android:src="@drawable/remove"
						android:visibility="gone"
						android:contentDescription="@string/remove_icon_description" />
				</androidx.cardview.widget.CardView>
			</LinearLayout>

			<TextView
				android:id="@+id/text1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Tips:"
				android:textColor="#3DF245"
				android:textSize="20sp" />

			<TextView
				android:id="@id/text2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Don't Upload Cat,Dog,Flowers that kind of images because no One Likes(Swipe Right) your Profile Presenting Image  is  everything ."
				android:textColor="@color/black"
				android:textSize="14sp"
				android:textStyle="italic" />

			<TextView
				android:id="@+id/text3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="In case we get to know that your profile picture and Account Details are Fake while Verifing, We Would Block Your Account Permanetly."
				android:textColor="@color/black"
				android:textSize="14sp"
				android:textStyle="italic" />
		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
